--- a/angular.json
+++ b/angular.json
@@ -67,7 +67,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "chatbot:build"
+            "browserTarget": "chatbot:build",
           },
           "configurations": {
             "production": {
